--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -76,7 +76,9 @@
 		<h1>Домашні завдання (Урок 65).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача № 1().</a>
+				<a target="_blank" href="./tasks/task1.html">Задача № 1. Інвестор вклав S тис. грн на 20 років під 20% річних, а
+					потім на 17 років під 27% річних. Визначити за допомогою циклів
+					суму, яку він одержить.</a>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task2.html">Задача № 2().</a>
