--- a/lesson6/tasks/task1.html
+++ b/lesson6/tasks/task1.html
@@ -81,7 +81,8 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №1().</h1>
+		<h1>Задача №1. Інвестор вклав S тис. грн на 20 років під 20% річних, а потім на 17 років під 27% річних.
+			Визначити за допомогою циклів суму, яку він одержить.</h1>
 		<script>
 
 		</script>
