--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -80,7 +80,12 @@
 					податок складає 5% від суми прибутку. Визначити за допомогою циклів суму, яку він одержить.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № 2().</a>
+				<a target="_blank" href="./tasks/task2.html">Задача № 2. На складі зберігається певна кількість ящиків з
+					яблуками(наприклад, 15).Коли під’їде машина для завантаження, попросити
+					користувача ввести, скільки ящиків завантажити у першу машину, у другу і т.д., поки на складі не закінчаться
+					ящики з
+					яблуками.Передбачити той випадок, коли користувач вводить кількість, що перевищує поточну кількість ящиків на
+					складі.</a>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task3.html">Задача № 3().</a>
