--- a/lesson6/tasks/task2.html
+++ b/lesson6/tasks/task2.html
@@ -81,7 +81,12 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №2().</h1>
+		<h1>Задача №2. На складі зберігається певна кількість ящиків з яблуками(наприклад, 15).Коли під’їде машина для
+			завантаження, попросити
+			користувача ввести, скільки ящиків завантажити у першу машину, у другу і т.д., поки на складі не закінчаться ящики
+			з
+			яблуками.Передбачити той випадок, коли користувач вводить кількість, що перевищує поточну кількість ящиків на
+			складі.</h1>
 		<script>
 
 		</script>
