--- a/lesson6/tasks/task2.html
+++ b/lesson6/tasks/task2.html
@@ -88,7 +88,19 @@
 			яблуками.Передбачити той випадок, коли користувач вводить кількість, що перевищує поточну кількість ящиків на
 			складі.</h1>
 		<script>
-
+			let numberOfBoxesOfApples = parseInt(prompt('enter the number of boxes of apples in the warehouse')) // кількість ящиків з яблуками на складі
+			let carsNumber = 0 // кількість автомобілів 
+			let numberOfBoxesToLoad = 0 // кількість ящиків на завантаження 
+			first: while (numberOfBoxesOfApples > 0) {
+				carsNumber++
+				numberOfBoxesToLoad = parseInt(prompt(`how many boxes to load in the ${carsNumber} car`))
+				if (numberOfBoxesToLoad > numberOfBoxesOfApples) {
+					alert(`you don't have such number of boxes\nit's ramain ${numberOfBoxesOfApples}`)
+					carsNumber--
+					continue first
+				}
+				numberOfBoxesOfApples -= numberOfBoxesToLoad
+			}
 		</script>
 	</div>
 </body>
