added condition for 3rd task

--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -88,7 +88,9 @@
 					складі.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3().</a>
+				<a target="_blank" href="./tasks/task3.html">Задача № 3.Задача №3.З клавіатури вводиться вартість одиниці
+					товару. Поки користувач не введе суму грошей, яка достатня для купівлі товару або не відмовиться від купівлі
+					давати можливість вводити суму грошей.</a>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task4.html">Задача №4().</a>
