--- a/lesson6/tasks/task3.html
+++ b/lesson6/tasks/task3.html
@@ -81,7 +81,9 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №3().</h1>
+		<h1>Задача №3.З клавіатури вводиться вартість одиниці товару. Поки користувач не введе суму грошей, яка достатня для
+			купівлі товару
+			або не відмовиться від купівлі давати можливість вводити суму грошей.</h1>
 		<script>
 
 		</script>
