added solution for the 3rd task

--- a/lesson6/tasks/task3.html
+++ b/lesson6/tasks/task3.html
@@ -85,7 +85,13 @@
 			купівлі товару
 			або не відмовиться від купівлі давати можливість вводити суму грошей.</h1>
 		<script>
-
+			let totalSum = 0
+			let productPrice = parseFloat(prompt('Enter product price'))
+			let paidAmount = 0
+			while (productPrice >= totalSum || paidAmount === false) {
+				paidAmount = parseFloat(prompt('enter the amount of money'))
+				totalSum += paidAmount
+			}
 		</script>
 	</div>
 </body>
