added condition to the 4th task

--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -93,7 +93,9 @@
 					давати можливість вводити суму грошей.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №4().</a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4. Комп’ютер загадує два випадкових числа від 1 до 10.
+					Вгадати обидва числа шляхом введеня можливих варіантів. В кінці
+					вивести кількість спроб користувача.</a>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task5.html">Задача №5().</a>
