--- a/lesson6/tasks/task4.html
+++ b/lesson6/tasks/task4.html
@@ -81,7 +81,9 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №4().</h1>
+		<h1>Задача №4. Комп’ютер загадує два випадкових числа від 1 до 10. Вгадати обидва числа шляхом введеня можливих
+			варіантів. В кінці
+			вивести кількість спроб користувача.</h1>
 		<script>
 
 		</script>
