added condition of the task

--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -98,7 +98,9 @@
 					вивести кількість спроб користувача.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №5().</a>
+				<a target="_blank" href="./tasks/task5.html">Задача №5. З клавіатури вводиться пароль (правильний пароль- 78).
+					Поки пароль не вірний дати можливість користувачу повторно ввести
+					його.</a>
 			</li>
 			<li>
 				<a target="_blank" href="../additionalTasks/lesson6/index.html">Інші завдання.</a>
