--- a/lesson6/tasks/task5.html
+++ b/lesson6/tasks/task5.html
@@ -81,7 +81,9 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №5().</h1>
+		<h1>Задача №5. З клавіатури вводиться пароль (правильний пароль- 78). Поки пароль не вірний дати можливість
+			користувачу повторно ввести
+			його.</h1>
 		<script>
 
 		</script>
