--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Домашні завдання (Урок 65).</h1>
+		<h1>Домашні завдання (Урок 6).</h1>
 		<ol>
 			<li>
 				<a target="_blank" href="./tasks/task1.html">Задача № 1. Інвестор вклав S тис. грн на 20 років під 20% річних,
@@ -88,7 +88,7 @@
 					складі.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3.Задача №3.З клавіатури вводиться вартість одиниці
+				<a target="_blank" href="./tasks/task3.html">Задача № 3.З клавіатури вводиться вартість одиниці
 					товару. Поки користувач не введе суму грошей, яка достатня для купівлі товару або не відмовиться від купівлі
 					давати можливість вводити суму грошей.</a>
 			</li>
