added link to 6th lesson

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<main>
 			<ul>
 				<li>
+					<a target="_blank" href="./lesson6/index.html">Домашні завдання (Урок №6).</a>
+				</li>
+				<li>
 					<a target="_blank" href="./lesson5/index.html">Домашні завдання (Урок №5).</a>
 				</li>
 				<li>
