--- a/lesson7/tasks/task1.html
+++ b/lesson7/tasks/task1.html
@@ -81,9 +81,34 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №1. </h1>
+		<h1>Задача №1. Створити функцію, яка за номером місяця повертає пору року, до якої відноситься цей місяць.</h1>
 		<script>
-
+			function getSeason(monthNumber) {
+				let result
+				switch (monthNumber) {
+					case 1:
+					case 2:
+					case 12: result = 'Winter'
+						break
+					case 3:
+					case 4:
+					case 5: result = 'Spring'
+						break
+					case 6:
+					case 7:
+					case 8: result = 'Summer'
+						break
+					case 9:
+					case 10:
+					case 11: result = 'Autumn'
+						break
+					default: result = 'There is no month with this number.'
+						break
+				}
+				return result
+			}
+			const monthNumber = parseInt(prompt('Enter nomber of any Month'))
+			alert(getSeason(monthNumber))
 		</script>
 	</div>
 </body>
