--- a/lesson7/tasks/task2.html
+++ b/lesson7/tasks/task2.html
@@ -81,9 +81,42 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №2. </h1>
+		<h1>Задача №2. Створити функцію, яка за номером місяця повертає його назву.</h1>
 		<script>
-
+			function getMonthName(monthNubmer) {
+				let result
+				switch (monthNubmer) {
+					case 1: result = 'January'
+						break
+					case 2: result = 'February'
+						break
+					case 3: result = 'March'
+						break
+					case 4: result = 'April'
+						break
+					case 5: result = 'May'
+						break
+					case 6: result = 'June'
+						break
+					case 7: result = 'July'
+						break
+					case 8: result = 'August'
+						break
+					case 9: result = 'September'
+						break
+					case 10: result = 'October'
+						break
+					case 11: result = 'November'
+						break
+					case 12: result = 'December'
+						break
+					default: result = 'No month with this number'
+						break
+				}
+				return result
+			}
+			const monthNubmer = parseInt(prompt('Enter number of any month'))
+			alert(getMonthName(monthNubmer))
 		</script>
 	</div>
 </body>
