--- a/lesson7/tasks/task7.html
+++ b/lesson7/tasks/task7.html
@@ -81,9 +81,18 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №7. </h1>
+		<h1>Задача №7. Створити функцію, яка випадковим чином виводить на екран одне із 4 зображень (шляхи до зображень
+			передаються у функцію).</h1>
 		<script>
-
+			function getPathToImg() {
+				let rendNum = 1 + Math.floor(Math.random() * 4)
+				let imgPath = `./img/task7/Img${rendNum}.svg`
+				return imgPath
+			}
+			function showImg() {
+				document.write(`<img src="${getPathToImg()}" style="width:300px;">`)
+			}
+			showImg()
 		</script>
 	</div>
 </body>
