--- a/lesson7/tasks/task10.html
+++ b/lesson7/tasks/task10.html
@@ -81,9 +81,36 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №10.</h1>
+		<h1>Задача №10.Дано покази температур (довільна кількість). Розробити
+			функцію, яка дозволить знайти середнє значення для додатних
+			показів температури.
+			температури.</h1>
 		<script>
+			function getNumberOfTemperatureMeasurements(num) {
+				num = parseInt(prompt('enter the number of measurements'))
+				return num
+			}
 
+			function getAveragePositiveTemperatureValues() {
+				let averageTemperature = 0
+				let temperatureValueSum = 0
+				let measurementsNumber = getNumberOfTemperatureMeasurements()
+				for (let temperature = 0; temperature < measurementsNumber;) {
+					let temperatureValue = parseInt(prompt('enter the temperature value'))
+					if (Math.sign(temperatureValue) === -1 || Math.sign(temperatureValue) === -0 || isNaN(temperatureValue))
+						continue
+					else {
+						temperatureValueSum += temperatureValue
+						temperature++
+					}
+				}
+				return averageTemperature = temperatureValueSum / measurementsNumber
+			}
+
+			function showAveragePositiveTemperatureValues() {
+				document.write(`The average temperature is ${getAveragePositiveTemperatureValues()} degree.`)
+			}
+			showAveragePositiveTemperatureValues()
 		</script>
 	</div>
 </body>
