changed text in the 8th task link

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -107,8 +107,7 @@
 			<li>
 				<a target="_blank" href="./tasks/task5.html">Задача №8.Створити функцію, яка виводить банер (у функцію
 					передаються: зображення, заголовок та посилання, куди переходимо при
-					кліку на зображення (тег img повинен знаходитись у середині тега a:
-					<code><a> <img src=”шлях”> </a></a></code>)).
+					кліку на зображення (тег img повинен знаходитись у середині тега a:)).
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task5.html">Задача №9. Дано покази температур (довільна кількість). Розробити
