fixed mistakes in text

--- a/lesson7/tasks/task4.html
+++ b/lesson7/tasks/task4.html
@@ -108,10 +108,10 @@
 			let firstNumber = parseInt(prompt('Enter first num'))
 			let secondNumber = parseInt(prompt('Enter second num'))
 			document.write(`<p>The first number is ${firstNumber}. The second number is ${secondNumber}.</p>`)
-			document.write(`<p>The sum of the numbers is ${getSum(firstNumber, secondNumber)}</p>`)
-			document.write(`<p>The product of the numbers is ${getProduct(firstNumber, secondNumber)}</p>`)
+			document.write(`<p>The sum of the numbers is ${getSum(firstNumber, secondNumber)}.</p>`)
+			document.write(`<p>The product of the numbers is ${getProduct(firstNumber, secondNumber)}.</p>`)
 			document.write(`<p>The arithmetic mean of the numbers is ${getAverageNumber(firstNumber, secondNumber)}.</p>`)
-			document.write(`<p>The minimum number of the two numbers is ${getMinNumber(firstNumber, secondNumber)}</p>.`)
+			document.write(`<p>The minimum number of the two numbers is ${getMinNumber(firstNumber, secondNumber)}.</p>`)
 		</script>
 	</div>
 </body>
