solution according to the mentor's reccomendations

--- a/lesson7/tasks/task7.html
+++ b/lesson7/tasks/task7.html
@@ -77,6 +77,10 @@
 			padding-left: 15px;
 			padding-right: 15px;
 		}
+
+		img {
+			max-width: 400px;
+		}
 	</style>
 </head>
 <body>
@@ -84,16 +88,43 @@
 		<h1>Задача №7. Створити функцію, яка випадковим чином виводить на екран одне із 4 зображень (шляхи до зображень
 			передаються у функцію).</h1>
 		<script>
-			function getPathToImg() {
-				let rendNum = 1 + Math.floor(Math.random() * 4)
-				let imgPath = `./img/task7/Img${rendNum}.svg`
-				return imgPath
+			// solution according to the mentor's reccomendations
+			function getRandomImagePath(imgPath1, imgPath2, imgPath3, imgPath4) {
+				let rnd = 1 + Math.floor(Math.random() * 4)
+				let result
+				switch (rnd) {
+					case 1: result = imgPath1
+						break;
+					case 2: result = imgPath2
+						break;
+					case 3: result = imgPath3
+						break;
+					case 4: result = imgPath4
+						break;
+				}
+				return result
 			}
-			function showImg() {
-				document.write(`<img src="${getPathToImg()}" style="width:300px;">`)
-			}
-			showImg()
+			let randomImage = getRandomImagePath(
+				'./img/task7/Img1.svg',
+				'./img/task7/Img2.svg',
+				'./img/task7/Img3.svg',
+				'./img/task7/Img4.svg'
+			)
+			document.write(`<img src="${randomImage}">`)
+
+			/* first variant of the code
+				function getPathToImg() {
+					let rendNum = 1 + Math.floor(Math.random() * 4)
+					let imgPath = `./img/task7/Img${rendNum}.svg`
+					return imgPath
+				}
+				function showImg() {
+					document.write(`<img src="${getPathToImg()}" style="width:300px;">`)
+				}
+				showImg()
+			*/
 		</script>
+
 	</div>
 </body>
 </html>
